fixing button wrapping in the publish modal

--- a/services/web/public/stylesheets/app/editor/publish-modal.less
+++ b/services/web/public/stylesheets/app/editor/publish-modal.less
@@ -23,6 +23,9 @@
 		.wl-icon:before{
 				font-size: 14px;
 		}
+		.btn-primary{
+				whiteSpace: 'normal'
+		}
 		.button-as-link{
          color: green;
          text-transform: none;
